--- a/source/resume.html.haml
+++ b/source/resume.html.haml
@@ -20,7 +20,7 @@
         %dl
           %h3 AIGA Jacksonville Board Member
           %h6 Aug. 2014 &ndash; Current | JAX Chapter
-          %p Communications Chair, Newsletter
+          %p Communications Chair, Newsletter &amp; Let's Get Digital Chair
         %dl
           %h3 AIGA
           %h6 Sept. 2011 &ndash; Current | JAX Chapter
@@ -29,20 +29,20 @@
         %h2 Skills
         %ul
           %li UX / UI / Responsive Design
+          %li Design Thinking / Faciliation
+          %li Web Prototyping / User Interviews
           %li Sketch 3 / Adobe Creative Suite
-          %li HAML / SASS / BEM Methodology
-          %li CSS Frameworks / jQuery
-          %li Ruby on Rails / PHP
-          %li Github / Heroku / Web Prototyping
-          %li Command Line / Rspec Testing
+          %li HAML / SASS / BEM / CSS Frameworks
+          %li React / Ruby / Rails / JQuery / PHP
+          %li Github / Command Line / Rspec Testing
           %li Lean-Startup Methods / Agile Development
       %figure
         %h2 Experience
         %dl
           %h3 Ignite by Adecco
           %h4 UX / UI Designer
-          %h6 May 2014 &ndash; Current | Jacksonville, FL
-          %p Methodically takes complex problems and provides simple and elegant solutions.
+          %h6 May 2014 &ndash; Jul. 2016 | Jacksonville, FL
+          %p Methodically took complex problems and provided simple and elegant solutions.
         %dl
           %h3 One Spark, Inc.
           %h4 Web Consultant
@@ -77,5 +77,6 @@
           %h6 Feb. 2005 &ndash; Feb. 2013 | Saint Augustine, FL
           %h4 Produce Clerk
           %p Assisted in maintaining and managing product inventory.
+          %p Provided excellent customer service.
           %p Store 1239’s first Employee of the Month.
         %h6.v References available upon request.
