--- a/source/shared/_navigation.haml
+++ b/source/shared/_navigation.haml
@@ -9,9 +9,11 @@
     %section
       = image_tag('jason-aiga-200x200.jpg')
       %h2 Jason Kellum
+      %p UX / UI / Product Designer
       %p
-        UX / UI Designer @
-        %a{:href => 'http://www.ignitewithus.com', :target => '_blank'} Ignite
+        Currently in the market for a full-time
+        %a{:href => 'https://www.youtube.com/watch?v=Tfi8fT9oHkQ', :target => '_blank'}gig
+        &period;
       %ul
         %li
           %a{:href => '/'}
