--- a/source/work/asps.html.haml
+++ b/source/work/asps.html.haml
@@ -12,4 +12,4 @@
           = link_to 'here!', 'https://www.youtube.com/watch?v=uOsOcopQ4HY', target: '_blank'
         %p Bold colors were used to reflect the mood and context of the song. The sharp angles were drawn from the Artist's logo and help to define the characters of the word.
       .item-image
-        = image_tag('work/asps-1.jpg')
+        = image_tag('work/asps-1.jpg', {:alt => 'Lair'})
