--- a/source/work/bistro23.html.haml
+++ b/source/work/bistro23.html.haml
@@ -9,16 +9,16 @@
         %h5 American Style Bistro (Student Project)
         %p Bistro 23 is a fine-dining restaurant with an american cuisine menu. Located within the center of the screen are the menu options providing fragment identifer links to other sections of this one-page site, as well as the contrasting logo for brand recognition.
       .item-image
-        = image_tag('work/bistro23-devices.png')
+        = image_tag('work/bistro23-devices.png', {:alt => 'Bistro23 Devices'})
     %article.image
       .item-image
-        = image_tag('work/bistro23-1.jpg')
+        = image_tag('work/bistro23-1.jpg', {:alt => 'Homepage Screen'})
       .item-text
         %h3 Above the Fold
         %p The entire screen is filled with large-scale imagery of the restaurant, on a rotation timer.
     %article.image
       .item-image
-        = image_tag('work/bistro23-2.jpg')
+        = image_tag('work/bistro23-2.jpg', {:alt => 'Menu Screen'})
       .item-text
         %h3 Menu
         %p  As you scroll down, the menu fixates to the top of the browser. Once you reach the interior sections, you will find a an accordion-style menu to better organize the full list of menu items; this helps the user not feel overwhelmed with options.
