--- a/source/work/browndog.html.haml
+++ b/source/work/browndog.html.haml
@@ -9,22 +9,22 @@
         %h5 Internship Creations
         %p Completing a Web Design internship at Brown Dog Creative gave me the opportunity to work on and create multiple client websites, including Vision is Priceless and Medcom.
       .item-image
-        = image_tag('work/browndog-devices.png')
+        = image_tag('work/browndog-devices.png', {:alt => 'Brown Dog Creative Devices'})
     %article.image
       .item-image
-        = image_tag('work/vip-1.jpg')
+        = image_tag('work/vip-1.jpg', {:alt => 'Vision Is Priceless Homepage Screen'})
       .item-text
         %h3 Vision is Priceless
         %p For Vision is Priceless, we were tasked with updating the identity of the brand, as well as creating the new website. Some goals for the project were removing the “eyeball” from the logo, reduce the amount of copy, and incorporate brighter colors which attract audiences of all ages and ethnicity.
     %article.image
       .item-image
-        = image_tag('work/medcom-1.jpg')
+        = image_tag('work/medcom-1.jpg', {:alt => 'Medcome Homepage Screen'})
       .item-text
         %h3 Medcom Homepage
         %p Medcom had similar website problems, where they wanted to move way from their current site which was heavy in text and running flash. The goals for this project were to better incorporate the business’s colors, reorganize the content and structure of the website, and increase the overall attractability of the website.
     %article.image
       .item-image
-        = image_tag('work/medcom-2.jpg')
+        = image_tag('work/medcom-2.jpg', {:alt => 'Medcom Interior Screen'})
       .item-text
         %h3 Medcom Interior
         %p On their interior page, one requirement was to have a form field which allows the user to have quick access to requesting a quote.
