--- a/source/work/ignite.html.haml
+++ b/source/work/ignite.html.haml
@@ -10,11 +10,11 @@
           Innovation lab for Adecco group
         %p
           %a{:href => "http://www.ignitewithus.com/", :target => "_blank"}Ignite
-          partners with
+          partnered with
           %a{:href => "http://www.adecco.com/", :target => "_blank"}Adecco
           business units and sister companies to develop new technology that drives efficiency and bring new products to market that help people work.
         %p
-          Our company was in need of a new marketing website that could better tell who we were and what we are about. So a team was assembled and we got to &mdash;
+          The company was in need of a new marketing website that could better tell who we were and what we are about. So a team was assembled and we got to &mdash;
           %i work.
         %cite
           %ul
@@ -41,46 +41,46 @@
       .item-image.ignite-toggle
         .ignite-one
           .desk
-            = image_tag('work/ignite-home-desktop.jpg', {:alt => 'Homepage'})
+            = image_tag('work/ignite-home-desktop.jpg', {:alt => 'Homepage Screen'})
           .tab
-            = image_tag('work/ignite-home-tablet.jpg', {:alt => 'Homepage'})
+            = image_tag('work/ignite-home-tablet.jpg', {:alt => 'Homepage Screen'})
           .mob
-            = image_tag('work/ignite-home-mobile.jpg', {:alt => 'Homepage'})
+            = image_tag('work/ignite-home-mobile.jpg', {:alt => 'Homepage Screen'})
         .ignite-two.hide
           .desk
-            = image_tag('work/ignite-selfies-desktop.jpg', {:alt => 'Selfies'})
+            = image_tag('work/ignite-selfies-desktop.jpg', {:alt => 'Selfies Screen'})
           .tab
-            = image_tag('work/ignite-selfies-tablet.jpg', {:alt => 'Selfies'})
+            = image_tag('work/ignite-selfies-tablet.jpg', {:alt => 'Selfies Screen'})
           .mob
-            = image_tag('work/ignite-selfies-mobile.jpg', {:alt => 'Selfies'})
+            = image_tag('work/ignite-selfies-mobile.jpg', {:alt => 'Selfies Screen'})
         .ignite-three.hide
           .desk
-            = image_tag('work/ignite-jobs-desktop.jpg', {:alt => 'Jobs'})
+            = image_tag('work/ignite-jobs-desktop.jpg', {:alt => 'Jobs Screen'})
           .tab
-            = image_tag('work/ignite-jobs-tablet.jpg', {:alt => 'Jobs'})
+            = image_tag('work/ignite-jobs-tablet.jpg', {:alt => 'Jobs Screen'})
           .mob
-            = image_tag('work/ignite-jobs-mobile.jpg', {:alt => 'Jobs'})
+            = image_tag('work/ignite-jobs-mobile.jpg', {:alt => 'Jobs Screen'})
         .ignite-four.hide
           .desk
-            = image_tag('work/ignite-login-desktop.jpg', {:alt => 'Login'})
+            = image_tag('work/ignite-login-desktop.jpg', {:alt => 'Login Screen'})
           .tab
-            = image_tag('work/ignite-login-tablet.jpg', {:alt => 'Login'})
+            = image_tag('work/ignite-login-tablet.jpg', {:alt => 'Login Screen'})
           .mob
-            = image_tag('work/ignite-login-mobile.jpg', {:alt => 'Login'})
+            = image_tag('work/ignite-login-mobile.jpg', {:alt => 'Login Screen'})
         .ignite-five.hide
           .desk
-            = image_tag('work/ignite-resources-desktop.jpg', {:alt => 'Resources'})
+            = image_tag('work/ignite-resources-desktop.jpg', {:alt => 'Resources Screen'})
           .tab
-            = image_tag('work/ignite-resources-tablet.jpg', {:alt => 'Resources'})
+            = image_tag('work/ignite-resources-tablet.jpg', {:alt => 'Resources Screen'})
           .mob
-            = image_tag('work/ignite-resources-mobile.jpg', {:alt => 'Resources'})
+            = image_tag('work/ignite-resources-mobile.jpg', {:alt => 'Resources Screen'})
         .ignite-six.hide
           .desk
-            = image_tag('work/ignite-contact-desktop.jpg', {:alt => 'Contact'})
+            = image_tag('work/ignite-contact-desktop.jpg', {:alt => 'Contact Screen'})
           .tab
-            = image_tag('work/ignite-contact-tablet.jpg', {:alt => 'Contact'})
+            = image_tag('work/ignite-contact-tablet.jpg', {:alt => 'Contact Screen'})
           .mob
-            = image_tag('work/ignite-contact-mobile.jpg', {:alt => 'Contact'})
+            = image_tag('work/ignite-contact-mobile.jpg', {:alt => 'Contact Screen'})
       .item-text
         %h3 2015 Marketing Site
         %p In just two years from Ignite's launch, we outgrew the capabilities that our previous one-page marketing website could provide. With a goal of raising brand awareness and increasing product adoption rate, we aimed to make more of our information and resources available online.
