--- a/source/work/onespark.html.haml
+++ b/source/work/onespark.html.haml
@@ -30,25 +30,25 @@
       .item-image.onespark-toggle
         .onespark-one
           .desk
-            = image_tag('work/onespark-signin-desktop.jpg', {:alt => 'Sign In'})
+            = image_tag('work/onespark-signin-desktop.jpg', {:alt => 'Sign In Screen'})
           .tab
-            = image_tag('work/onespark-signin-tablet.jpg', {:alt => 'Sign In'})
+            = image_tag('work/onespark-signin-tablet.jpg', {:alt => 'Sign In Screen'})
           .mob
-            = image_tag('work/onespark-signin-mobile.jpg', {:alt => 'Sign In'})
+            = image_tag('work/onespark-signin-mobile.jpg', {:alt => 'Sign In Screen'})
         .onespark-two.hide
           .desk
-            = image_tag('work/onespark-register-desktop.jpg', {:alt => 'Register'})
+            = image_tag('work/onespark-register-desktop.jpg', {:alt => 'Register Screen'})
           .tab
-            = image_tag('work/onespark-register-tablet.jpg', {:alt => 'Register'})
+            = image_tag('work/onespark-register-tablet.jpg', {:alt => 'Register Screen'})
           .mob
-            = image_tag('work/onespark-register-mobile.jpg', {:alt => 'Register'})
+            = image_tag('work/onespark-register-mobile.jpg', {:alt => 'Register Screen'})
         .onespark-three.hide
           .desk
-            = image_tag('work/onespark-forgotpw-desktop.jpg', {:alt => 'Forgot Password'})
+            = image_tag('work/onespark-forgotpw-desktop.jpg', {:alt => 'Forgot Password Screen'})
           .tab
-            = image_tag('work/onespark-forgotpw-tablet.jpg', {:alt => 'Forgot Password'})
+            = image_tag('work/onespark-forgotpw-tablet.jpg', {:alt => 'Forgot Password Screen'})
           .mob
-            = image_tag('work/onespark-forgotpw-mobile.jpg', {:alt => 'Forgot Password'})
+            = image_tag('work/onespark-forgotpw-mobile.jpg', {:alt => 'Forgot Password Screen'})
       .item-text
         %h3 Authentication Pages
         %p Since the authentication pages are some of the first opportunities to interact with our users, tackling these pages was the first line of business. We wanted to remove any barriers or unnecessary noise that could distract or prevent the user from accomplishing their only goal on these screens &mdash; to sign in.
@@ -59,11 +59,11 @@
     %article.image
       .item-image.toggle-view
         .desk
-          = image_tag('work/onespark-launchpad-desktop.jpg', {:alt => 'Launchpad'})
+          = image_tag('work/onespark-launchpad-desktop.jpg', {:alt => 'Launchpad Screen'})
         .tab
-          = image_tag('work/onespark-launchpad-tablet.jpg', {:alt => 'Launchpad'})
+          = image_tag('work/onespark-launchpad-tablet.jpg', {:alt => 'Launchpad Screen'})
         .mob
-          = image_tag('work/onespark-launchpad-mobile.jpg', {:alt => 'Launchpad'})
+          = image_tag('work/onespark-launchpad-mobile.jpg', {:alt => 'Launchpad Screen'})
       .item-text
         %h3 Launchpad
         %p One of the main sections of the site that needed reworking was the user launchpad. This is the first screen a user sees upon sign in and it has real estate for almost every major action a user can take in the app.
