--- a/source/work/resumebot.html.haml
+++ b/source/work/resumebot.html.haml
@@ -32,7 +32,7 @@
         %p
           While at
           %a{:href => "http://www.ignitewithus.com/", :target => "_blank"}Ignite
-          we place an emphasis on improving the recruiter environment through digital means, there is and may always be, a need for printed materials. These 8&frac12; x 11 printouts were created to provide additional R&eacute;sum&eacute;Bot support resources for business units acquiring how to use this tool.
+          we placed an emphasis on improving the recruiter environment through digital means, there is and may always be, a need for printed materials. These 8&frac12; x 11 printouts were created to provide additional R&eacute;sum&eacute;Bot support resources for business units acquiring how to use this tool.
         %cite
           %ul
             %li
