--- a/source/work/trucknseek.html.haml
+++ b/source/work/trucknseek.html.haml
@@ -9,4 +9,4 @@
         %h5 Food Truck App (Preview)
         %p Aiming to connect people with trucks, this geo-locational app allows food truck owners to post their locations and timeframe. Customers are able to search and view nearby trucks after entering in an address. Created by Spring 2014 KYN apprentices.
       .item-image
-        = image_tag('work/trucknseek-devices.png')
+        = image_tag('work/trucknseek-devices.png', {:alt => "Truck 'n Seek Devices"})
