--- a/source/work/txtout.html.haml
+++ b/source/work/txtout.html.haml
@@ -24,37 +24,37 @@
               Development:
               %a{:href => "https://www.linkedin.com/pub/mark-montroy/3/168/841", :target => "_blank"}Mark Montroy
       .item-image
-        = image_tag('work/txtout-devices.gif', {:alt => 'Devices'})
+        = image_tag('work/txtout-devices.gif', {:alt => 'TxtOut Devices'})
     %article.image
       .item-image.txtout-toggle
         .txtout-one
           .desk
-            = image_tag('work/txtout-dash-desktop.jpg', {:alt => 'Dashboard'})
+            = image_tag('work/txtout-dash-desktop.jpg', {:alt => 'Dashboard Screen'})
           .tab
-            = image_tag('work/txtout-dash-tablet.jpg', {:alt => 'Dashboard'})
+            = image_tag('work/txtout-dash-tablet.jpg', {:alt => 'Dashboard Screen'})
           .mob
-            = image_tag('work/txtout-dash-mobile.jpg', {:alt => 'Dashboard'})
+            = image_tag('work/txtout-dash-mobile.jpg', {:alt => 'Dashboard Screen'})
         .txtout-two.hide
           .desk
-            = image_tag('work/txtout-admin-desktop.jpg', {:alt => 'Admin'})
+            = image_tag('work/txtout-admin-desktop.jpg', {:alt => 'Admin Screen'})
           .tab
-            = image_tag('work/txtout-admin-tablet.jpg', {:alt => 'Admin'})
+            = image_tag('work/txtout-admin-tablet.jpg', {:alt => 'Admin Screen'})
           .mob
-            = image_tag('work/txtout-admin-mobile.jpg', {:alt => 'Admin'})
+            = image_tag('work/txtout-admin-mobile.jpg', {:alt => 'Admin Screen'})
         .txtout-three.hide
           .desk
-            = image_tag('work/txtout-login-desktop.jpg', {:alt => 'Login'})
+            = image_tag('work/txtout-login-desktop.jpg', {:alt => 'Login Screen'})
           .tab
-            = image_tag('work/txtout-login-tablet.jpg', {:alt => 'Login'})
+            = image_tag('work/txtout-login-tablet.jpg', {:alt => 'Login Screen'})
           .mob
-            = image_tag('work/txtout-login-mobile.jpg', {:alt => 'Login'})
+            = image_tag('work/txtout-login-mobile.jpg', {:alt => 'Login Screen'})
         .txtout-four.hide
           .desk
-            = image_tag('work/txtout-forgotpw-desktop.jpg', {:alt => 'Forgot Password'})
+            = image_tag('work/txtout-forgotpw-desktop.jpg', {:alt => 'Forgot Password Screen'})
           .tab
-            = image_tag('work/txtout-forgotpw-tablet.jpg', {:alt => 'Forgot Password'})
+            = image_tag('work/txtout-forgotpw-tablet.jpg', {:alt => 'Forgot Password Screen'})
           .mob
-            = image_tag('work/txtout-forgotpw-mobile.jpg', {:alt => 'Forgot Password'})
+            = image_tag('work/txtout-forgotpw-mobile.jpg', {:alt => 'Forgot Password Screen'})
       .item-text
         %h3 Admin Dashboard
         %select.div-toggler{'data-target' => '.txtout-toggle'}
