--- a/source/work/wayfind.html.haml
+++ b/source/work/wayfind.html.haml
@@ -43,116 +43,116 @@
       .item-image.wayfind-toggle-2
         .wayfind-eight.hide
           .desk
-            = image_tag('work/wayfind-login-desktop.jpg', {:alt => 'Login'})
+            = image_tag('work/wayfind-login-desktop.jpg', {:alt => 'Login Screen'})
           .tab
-            = image_tag('work/wayfind-login-tablet.jpg', {:alt => 'Login'})
+            = image_tag('work/wayfind-login-tablet.jpg', {:alt => 'Login Screen'})
           .mob
-            = image_tag('work/wayfind-login-mobile.jpg', {:alt => 'Login'})
+            = image_tag('work/wayfind-login-mobile.jpg', {:alt => 'Login Screen'})
         .wayfind-nine.hide
           .desk
-            = image_tag('work/wayfind-forgotpw-desktop.jpg', {:alt => 'Forgot Password'})
+            = image_tag('work/wayfind-forgotpw-desktop.jpg', {:alt => 'Forgot Password Screen'})
           .tab
-            = image_tag('work/wayfind-forgotpw-tablet.jpg', {:alt => 'Forgot Password'})
+            = image_tag('work/wayfind-forgotpw-tablet.jpg', {:alt => 'Forgot Password Screen'})
           .mob
-            = image_tag('work/wayfind-forgotpw-mobile.jpg', {:alt => 'Forgot Password'})
+            = image_tag('work/wayfind-forgotpw-mobile.jpg', {:alt => 'Forgot Password Screen'})
         .wayfind-ten.hide
           .desk
-            = image_tag('work/wayfind-marketing-desktop.jpg', {:alt => 'Marketing'})
+            = image_tag('work/wayfind-marketing-desktop.jpg', {:alt => 'Marketing Screen'})
           .tab
-            = image_tag('work/wayfind-marketing-tablet.jpg', {:alt => 'Marketing'})
+            = image_tag('work/wayfind-marketing-tablet.jpg', {:alt => 'Marketing Screen'})
           .mob
-            = image_tag('work/wayfind-marketing-mobile.jpg', {:alt => 'Marketing'})
+            = image_tag('work/wayfind-marketing-mobile.jpg', {:alt => 'Marketing Screen'})
         .wayfind-eleven
           .desk
-            = image_tag('work/wayfind-recommended-desktop.jpg', {:alt => 'Recommended'})
+            = image_tag('work/wayfind-recommended-desktop.jpg', {:alt => 'Recommended Screen'})
           .tab
-            = image_tag('work/wayfind-recommended-tablet.jpg', {:alt => 'Recommended'})
+            = image_tag('work/wayfind-recommended-tablet.jpg', {:alt => 'Recommended Screen'})
           .mob
-            = image_tag('work/wayfind-recommended-mobile.jpg', {:alt => 'Recommended'})
+            = image_tag('work/wayfind-recommended-mobile.jpg', {:alt => 'Recommended Screen'})
         .wayfind-twelve.hide
           .desk
-            = image_tag('work/wayfind-channel-desktop.jpg', {:alt => 'Channel'})
+            = image_tag('work/wayfind-channel-desktop.jpg', {:alt => 'Channel Screen'})
           .tab
-            = image_tag('work/wayfind-channel-tablet.jpg', {:alt => 'Channel'})
+            = image_tag('work/wayfind-channel-tablet.jpg', {:alt => 'Channel Screen'})
           .mob
-            = image_tag('work/wayfind-channel-mobile.jpg', {:alt => 'Channel'})
+            = image_tag('work/wayfind-channel-mobile.jpg', {:alt => 'Channel Screen'})
         .wayfind-thirteen.hide
           .desk
-            = image_tag('work/wayfind-role-details-desktop.jpg', {:alt => 'Role Details'})
+            = image_tag('work/wayfind-role-details-desktop.jpg', {:alt => 'Role Details Screen'})
           .tab
-            = image_tag('work/wayfind-role-details-tablet.jpg', {:alt => 'Role Details'})
+            = image_tag('work/wayfind-role-details-tablet.jpg', {:alt => 'Role Details Screen'})
           .mob
-            = image_tag('work/wayfind-role-details-mobile.jpg', {:alt => 'Role Details'})
+            = image_tag('work/wayfind-role-details-mobile.jpg', {:alt => 'Role Details Screen'})
         .wayfind-fourteen.hide
           .desk
-            = image_tag('work/wayfind-open-positions-desktop.jpg', {:alt => 'Open Positions'})
+            = image_tag('work/wayfind-open-positions-desktop.jpg', {:alt => 'Open Positions Screen'})
           .tab
-            = image_tag('work/wayfind-open-positions-tablet.jpg', {:alt => 'Open Positions'})
+            = image_tag('work/wayfind-open-positions-tablet.jpg', {:alt => 'Open Positions Screen'})
           .mob
-            = image_tag('work/wayfind-open-positions-mobile.jpg', {:alt => 'Open Positions'})
+            = image_tag('work/wayfind-open-positions-mobile.jpg', {:alt => 'Open Positions Screen'})
         .wayfind-fifteen.hide
           .desk
-            = image_tag('work/wayfind-plan-steps-desktop.jpg', {:alt => 'Plan Steps'})
+            = image_tag('work/wayfind-plan-steps-desktop.jpg', {:alt => 'Plan Steps Screen'})
           .tab
-            = image_tag('work/wayfind-plan-steps-tablet.jpg', {:alt => 'Plan Steps'})
+            = image_tag('work/wayfind-plan-steps-tablet.jpg', {:alt => 'Plan Steps Screen'})
           .mob
-            = image_tag('work/wayfind-plan-steps-mobile.jpg', {:alt => 'Plan Steps'})
+            = image_tag('work/wayfind-plan-steps-mobile.jpg', {:alt => 'Plan Steps Screen'})
         .wayfind-sixteen.hide
           .desk
-            = image_tag('work/wayfind-plan-overview-desktop.jpg', {:alt => 'Plan Overview'})
+            = image_tag('work/wayfind-plan-overview-desktop.jpg', {:alt => 'Plan Overview Screen'})
           .tab
-            = image_tag('work/wayfind-plan-overview-tablet.jpg', {:alt => 'Plan Overview'})
+            = image_tag('work/wayfind-plan-overview-tablet.jpg', {:alt => 'Plan Overview Screen'})
           .mob
-            = image_tag('work/wayfind-plan-overview-mobile.jpg', {:alt => 'Plan Overview'})
+            = image_tag('work/wayfind-plan-overview-mobile.jpg', {:alt => 'Plan Overview Screen'})
         .wayfind-seventeen.hide
           .desk
-            = image_tag('work/wayfind-browse-desktop.jpg', {:alt => 'Browse'})
+            = image_tag('work/wayfind-browse-desktop.jpg', {:alt => 'Browse Screen'})
           .tab
-            = image_tag('work/wayfind-browse-tablet.jpg', {:alt => 'Browse'})
+            = image_tag('work/wayfind-browse-tablet.jpg', {:alt => 'Browse Screen'})
           .mob
-            = image_tag('work/wayfind-browse-mobile.jpg', {:alt => 'Browse'})
+            = image_tag('work/wayfind-browse-mobile.jpg', {:alt => 'Browse Screen'})
         .wayfind-eighteen.hide
           .desk
-            = image_tag('work/wayfind-search-desktop.jpg', {:alt => 'Search'})
+            = image_tag('work/wayfind-search-desktop.jpg', {:alt => 'Search Screen'})
           .tab
-            = image_tag('work/wayfind-search-tablet.jpg', {:alt => 'Search'})
+            = image_tag('work/wayfind-search-tablet.jpg', {:alt => 'Search Screen'})
           .mob
-            = image_tag('work/wayfind-search-mobile.jpg', {:alt => 'Search'})
+            = image_tag('work/wayfind-search-mobile.jpg', {:alt => 'Search Screen'})
         .wayfind-nineteen.hide
           .desk
-            = image_tag('work/wayfind-profile-tab1-desktop.jpg', {:alt => 'Profile Account Details'})
+            = image_tag('work/wayfind-profile-tab1-desktop.jpg', {:alt => 'Profile Account Details Screen'})
           .tab
-            = image_tag('work/wayfind-profile-tab1-tablet.jpg', {:alt => 'Profile Account Details'})
+            = image_tag('work/wayfind-profile-tab1-tablet.jpg', {:alt => 'Profile Account Details Screen'})
           .mob
-            = image_tag('work/wayfind-profile-tab1-mobile.jpg', {:alt => 'Profile Account Details'})
+            = image_tag('work/wayfind-profile-tab1-mobile.jpg', {:alt => 'Profile Account Details Screen'})
         .wayfind-twenty.hide
           .desk
-            = image_tag('work/wayfind-profile-tab2-desktop.jpg', {:alt => 'Profile Work Personality'})
+            = image_tag('work/wayfind-profile-tab2-desktop.jpg', {:alt => 'Profile Work Personality Screen'})
           .tab
-            = image_tag('work/wayfind-profile-tab2-tablet.jpg', {:alt => 'Profile Work Personality'})
+            = image_tag('work/wayfind-profile-tab2-tablet.jpg', {:alt => 'Profile Work Personality Screen'})
           .mob
-            = image_tag('work/wayfind-profile-tab2-mobile.jpg', {:alt => 'Profile Work Personality'})
+            = image_tag('work/wayfind-profile-tab2-mobile.jpg', {:alt => 'Profile Work Personality Screen'})
         .wayfind-twentyone.hide
           .desk
-            = image_tag('work/wayfind-profile-tab3-desktop.jpg', {:alt => 'Profile Background &amp; Skills'})
+            = image_tag('work/wayfind-profile-tab3-desktop.jpg', {:alt => 'Profile Background &amp; Skills Screen'})
           .tab
-            = image_tag('work/wayfind-profile-tab3-tablet.jpg', {:alt => 'Profile Background & Skills'})
+            = image_tag('work/wayfind-profile-tab3-tablet.jpg', {:alt => 'Profile Background & Skills Screen'})
           .mob
-            = image_tag('work/wayfind-profile-tab3-mobile.jpg', {:alt => 'Profile Background & Skills'})
+            = image_tag('work/wayfind-profile-tab3-mobile.jpg', {:alt => 'Profile Background & Skills Screen'})
         .wayfind-twentytwo.hide
           .desk
-            = image_tag('work/wayfind-profile-tab4-desktop.jpg', {:alt => 'Profile Interests'})
+            = image_tag('work/wayfind-profile-tab4-desktop.jpg', {:alt => 'Profile Interests Screen'})
           .tab
-            = image_tag('work/wayfind-profile-tab4-tablet.jpg', {:alt => 'Profile Interests'})
+            = image_tag('work/wayfind-profile-tab4-tablet.jpg', {:alt => 'Profile Interests Screen'})
           .mob
-            = image_tag('work/wayfind-profile-tab4-mobile.jpg', {:alt => 'Profile Interests'})
+            = image_tag('work/wayfind-profile-tab4-mobile.jpg', {:alt => 'Profile Interests Screen'})
         .wayfind-twentythree.hide
           .desk
-            = image_tag('work/wayfind-profile-tab5-desktop.jpg', {:alt => 'Profile Notification Preferences'})
+            = image_tag('work/wayfind-profile-tab5-desktop.jpg', {:alt => 'Profile Notification Preferences Screen'})
           .tab
-            = image_tag('work/wayfind-profile-tab5-tablet.jpg', {:alt => 'Profile Notification Preferences'})
+            = image_tag('work/wayfind-profile-tab5-tablet.jpg', {:alt => 'Profile Notification Preferences Screen'})
           .mob
-            = image_tag('work/wayfind-profile-tab5-mobile.jpg', {:alt => 'Profile Notification Preferences'})
+            = image_tag('work/wayfind-profile-tab5-mobile.jpg', {:alt => 'Profile Notification Preferences Screen'})
       .item-text
         %h3 In-App Screens
         %p Users can search for roles through one of our recommended channels, browse through categories, or search for something more specific. As they're browsing, they can save multiple roles that catch their interest to act upon at a later time.
@@ -179,53 +179,53 @@
       .item-image.wayfind-toggle
         .wayfind-one
           .desk
-            = image_tag('work/wayfind-onboarding-intro-desktop.jpg', {:alt => 'Onboarding Intro'})
+            = image_tag('work/wayfind-onboarding-intro-desktop.jpg', {:alt => 'Onboarding Intro Screen'})
           .tab
-            = image_tag('work/wayfind-onboarding-intro-tablet.jpg', {:alt => 'Onboarding Intro'})
+            = image_tag('work/wayfind-onboarding-intro-tablet.jpg', {:alt => 'Onboarding Intro Screen'})
           .mob
-            = image_tag('work/wayfind-onboarding-intro-mobile.jpg', {:alt => 'Onboarding Intro'})
+            = image_tag('work/wayfind-onboarding-intro-mobile.jpg', {:alt => 'Onboarding Intro Screen'})
         .wayfind-two.hide
           .desk
-            = image_tag('work/wayfind-onboarding-step1-desktop.jpg', {:alt => 'Onboarding Personality'})
+            = image_tag('work/wayfind-onboarding-step1-desktop.jpg', {:alt => 'Onboarding Personality Screen'})
           .tab
-            = image_tag('work/wayfind-onboarding-step1-tablet.jpg', {:alt => 'Onboarding Personality'})
+            = image_tag('work/wayfind-onboarding-step1-tablet.jpg', {:alt => 'Onboarding Personality Screen'})
           .mob
-            = image_tag('work/wayfind-onboarding-step1-mobile.jpg', {:alt => 'Onboarding Personality'})
+            = image_tag('work/wayfind-onboarding-step1-mobile.jpg', {:alt => 'Onboarding Personality Screen'})
         .wayfind-three.hide
           .desk
-            = image_tag('work/wayfind-onboarding-step2-desktop.jpg', {:alt => 'Onboarding Background'})
+            = image_tag('work/wayfind-onboarding-step2-desktop.jpg', {:alt => 'Onboarding Background Screen'})
           .tab
-            = image_tag('work/wayfind-onboarding-step2-tablet.jpg', {:alt => 'Onboarding Background'})
+            = image_tag('work/wayfind-onboarding-step2-tablet.jpg', {:alt => 'Onboarding Background Screen'})
           .mob
-            = image_tag('work/wayfind-onboarding-step2-mobile.jpg', {:alt => 'Onboarding Background'})
+            = image_tag('work/wayfind-onboarding-step2-mobile.jpg', {:alt => 'Onboarding Background Screen'})
         .wayfind-four.hide
           .desk
-            = image_tag('work/wayfind-onboarding-step3-desktop.jpg', {:alt => 'Onboarding Skills'})
+            = image_tag('work/wayfind-onboarding-step3-desktop.jpg', {:alt => 'Onboarding Skills Screen'})
           .tab
-            = image_tag('work/wayfind-onboarding-step3-tablet.jpg', {:alt => 'Onboarding Skills'})
+            = image_tag('work/wayfind-onboarding-step3-tablet.jpg', {:alt => 'Onboarding Skills Screen'})
           .mob
-            = image_tag('work/wayfind-onboarding-step3-mobile.jpg', {:alt => 'Onboarding Skills'})
+            = image_tag('work/wayfind-onboarding-step3-mobile.jpg', {:alt => 'Onboarding Skills Screen'})
         .wayfind-five.hide
           .desk
-            = image_tag('work/wayfind-onboarding-step4-desktop.jpg', {:alt => 'Onboarding Interests'})
+            = image_tag('work/wayfind-onboarding-step4-desktop.jpg', {:alt => 'Onboarding Interests Screen'})
           .tab
-            = image_tag('work/wayfind-onboarding-step4-tablet.jpg', {:alt => 'Onboarding Interests'})
+            = image_tag('work/wayfind-onboarding-step4-tablet.jpg', {:alt => 'Onboarding Interests Screen'})
           .mob
-            = image_tag('work/wayfind-onboarding-step4-mobile.jpg', {:alt => 'Onboarding Interests'})
+            = image_tag('work/wayfind-onboarding-step4-mobile.jpg', {:alt => 'Onboarding Interests Screen'})
         .wayfind-six.hide
           .desk
-            = image_tag('work/wayfind-onboarding-step5-desktop.jpg', {:alt => 'Onboarding Save Profile'})
+            = image_tag('work/wayfind-onboarding-step5-desktop.jpg', {:alt => 'Onboarding Save Profile Screen'})
           .tab
-            = image_tag('work/wayfind-onboarding-step5-tablet.jpg', {:alt => 'Onboarding Save Profile'})
+            = image_tag('work/wayfind-onboarding-step5-tablet.jpg', {:alt => 'Onboarding Save Profile Screen'})
           .mob
-            = image_tag('work/wayfind-onboarding-step5-mobile.jpg', {:alt => 'Onboarding Save Profile'})
+            = image_tag('work/wayfind-onboarding-step5-mobile.jpg', {:alt => 'Onboarding Save Profile Screen'})
         .wayfind-seven.hide
           .desk
-            = image_tag('work/wayfind-onboarding-completed-desktop.jpg', {:alt => 'Onboarding Success'})
+            = image_tag('work/wayfind-onboarding-completed-desktop.jpg', {:alt => 'Onboarding Success Screen'})
           .tab
-            = image_tag('work/wayfind-onboarding-completed-tablet.jpg', {:alt => 'Onboarding Success'})
+            = image_tag('work/wayfind-onboarding-completed-tablet.jpg', {:alt => 'Onboarding Success Screen'})
           .mob
-            = image_tag('work/wayfind-onboarding-completed-mobile.jpg', {:alt => 'Onboarding Success'})
+            = image_tag('work/wayfind-onboarding-completed-mobile.jpg', {:alt => 'Onboarding Success Screen'})
       .item-text
         %h3 Onboarding Flow
         %p
