--- a/source/work/combofonts.html.haml
+++ b/source/work/combofonts.html.haml
@@ -12,68 +12,56 @@
       .item-image
         = image_tag('work/combofonts-devices.png')
     %article.image
-      .item-image.toggle-view
-        .desk
-          = image_tag('work/cf-splash-desktop.jpg')
-        .tab
-          = image_tag('work/cf-splash-desktop.jpg')
-        .mob
-          = image_tag('work/cf-splash-mobile.jpg')
-      .item-text
-        %h3 Splash Page
-        -# %p Text
-    %article.image
-      .item-image.toggle-view
-        .desk
-          = image_tag('work/cf-q1-desktop.jpg')
-        .tab
-          = image_tag('work/cf-q1-desktop.jpg')
-        .mob
-          = image_tag('work/cf-q1-mobile.jpg')
-      .item-text
-        %h3 Question One
-        -# %p Text
-    %article.image
-      .item-image.toggle-view
-        .desk
-          = image_tag('work/cf-q2-desktop.jpg')
-        .tab
-          = image_tag('work/cf-q2-desktop.jpg')
-        .mob
-          = image_tag('work/cf-q2-mobile.jpg')
-      .item-text
-        %h3 Question Two
-        -# %p Text
-    %article.image
-      .item-image.toggle-view
-        .desk
-          = image_tag('work/cf-options-desktop.jpg')
-        .tab
-          = image_tag('work/cf-options-desktop.jpg')
-        .mob
-          = image_tag('work/cf-options-mobile.jpg')
-      .item-text
-        %h3 Options
-        -# %p Text
-    %article.image
-      .item-image.toggle-view
-        .desk
-          = image_tag('work/cf-results-desktop.jpg')
-        .tab
-          = image_tag('work/cf-results-desktop.jpg')
-        .mob
-          = image_tag('work/cf-results-mobile.jpg')
-      .item-text
-        %h3 Results
-        -# %p Text
-    %article.image
-      .item-image.toggle-view
-        .desk
-          = image_tag('work/cf-code-desktop.jpg')
-        .tab
-          = image_tag('work/cf-code-desktop.jpg')
-        .mob
-          = image_tag('work/cf-code-mobile.jpg')
+      .item-image.combofonts-toggle
+        .combofonts-one
+          .desk
+            = image_tag('work/cf-splash-desktop.jpg', {:alt => 'Getting Started Screen'})
+          .tab
+            = image_tag('work/cf-splash-desktop.jpg', {:alt => 'Getting Started Screen'})
+          .mob
+            = image_tag('work/cf-splash-mobile.jpg', {:alt => 'Getting Started Screen'})
+        .combofonts-two.hide
+          .desk
+            = image_tag('work/cf-q1-desktop.jpg', {:alt => 'Describe Screen'})
+          .tab
+            = image_tag('work/cf-q1-desktop.jpg', {:alt => 'Describe Screen'})
+          .mob
+            = image_tag('work/cf-q1-mobile.jpg', {:alt => 'Describe Screen'})
+        .combofonts-three.hide
+          .desk
+            = image_tag('work/cf-q2-desktop.jpg', {:alt => 'Nature Screen'})
+          .tab
+            = image_tag('work/cf-q2-desktop.jpg', {:alt => 'Nature Screen'})
+          .mob
+            = image_tag('work/cf-q2-mobile.jpg', {:alt => 'Nature Screen'})
+        .combofonts-four.hide
+          .desk
+            = image_tag('work/cf-options-desktop.jpg', {:alt => 'Options Screen'})
+          .tab
+            = image_tag('work/cf-options-desktop.jpg', {:alt => 'Options Screen'})
+          .mob
+            = image_tag('work/cf-options-mobile.jpg', {:alt => 'Options Screen'})
+        .combofonts-five.hide
+          .desk
+            = image_tag('work/cf-results-desktop.jpg', {:alt => 'Results Screen'})
+          .tab
+            = image_tag('work/cf-results-desktop.jpg', {:alt => 'Results Screen'})
+          .mob
+            = image_tag('work/cf-results-mobile.jpg', {:alt => 'Results Screen'})
+        .combofonts-six.hide
+          .desk
+            = image_tag('work/cf-code-desktop.jpg', {:alt => 'Usable Code Screen'})
+          .tab
+            = image_tag('work/cf-code-desktop.jpg', {:alt => 'Usable Code Screen'})
+          .mob
+            = image_tag('work/cf-code-mobile.jpg', {:alt => 'Usable Code Screen'})
       .item-text
         %h3 Usable Code
-        -# %p Text
+        %p Text needed here.
+        %select.div-toggler{'data-target' => '.combofonts-toggle'}
+          %option{'data-show' => '.combofonts-one', :value => 'combofonts-one', :selected => 'selected'} Getting Started
+          %option{'data-show' => '.combofonts-two', :value => 'combofonts-two'}  Describe
+          %option{'data-show' => '.combofonts-three', :value => 'combofonts-three'} Nature
+          %option{'data-show' => '.combofonts-four', :value => 'combofonts-four'}  Options
+          %option{'data-show' => '.combofonts-five', :value => 'combofonts-five'}  Results
+          %option{'data-show' => '.combofonts-six', :value => 'combofonts-six'}  Usable Code
