--- a/source/work/metrology.html.haml
+++ b/source/work/metrology.html.haml
@@ -9,46 +9,46 @@
         %h5 Measurement App (Student Project)
         %p Metrology is a measurement app designed for the iOS. It contains multiple tools for taking everyday measurements by using the camera or an existing photo. You can also save the results for later use.
       .item-image
-        = image_tag('work/metrology-devices.png')
+        = image_tag('work/metrology-devices.png', {:alt => 'Metrology Devices'})
     %article.phone
       .item-image
-        = image_tag('work/metrology-1.png')
+        = image_tag('work/metrology-1.png', {:alt => 'Loading Screen'})
       .item-text
         %h3 Loading...
         %p Intro screen while app opens.
     %article.phone
       .item-image
-        = image_tag('work/metrology-2.png')
+        = image_tag('work/metrology-2.png', {:alt => 'Main Menu Screen'})
       .item-text
         %h3 Main Menu
         %p Select the type of measurement you need.
     %article.phone
       .item-image
-        = image_tag('work/metrology-3.png')
+        = image_tag('work/metrology-3.png', {:alt => 'Input Mode Screen'})
       .item-text
         %h3 Input Mode
         %p Would you like to use a photo from your camera roll or take a new photo?
     %article.phone
       .item-image
-        = image_tag('work/metrology-4.png')
+        = image_tag('work/metrology-4.png', {:alt => 'Action Screen'})
       .item-text
         %h3 Action Screen
         %p Swipe to create a path that will be used for the calculation.
     %article.phone
       .item-image
-        = image_tag('work/metrology-5.png')
+        = image_tag('work/metrology-5.png', {:alt => 'Result Screen'})
       .item-text
         %h3 Result
         %p Based on the path created by the user, the application interpretes the photo and calculates the degree of the angle.
     %article.phone
       .item-image
-        = image_tag('work/metrology-6.png')
+        = image_tag('work/metrology-6.png', {:alt => 'Pop&amp;out Menu Screen'})
       .item-text
         %h3 Pop&ndash;out Menu
         %p During any time of the process or at any location within the app, the user can open this quick access menu by simply selecting the gear in the upper right hand corner. The decision to create a pop&ndash;out menu allows the user to still keep track of where they are in the app, visually.
     %article.phone
       .item-image
-        = image_tag('work/metrology-7.png')
+        = image_tag('work/metrology-7.png', {:alt => 'History Screen'})
       .item-text
         %h3 History Screen
         %p All calculations are recorded within the history screen where you can either save to favorites for later use or delete.
